SynProdGITV1/force-app/main/default/objects/Product_Stock_Batch_Data__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <description>Batch ID</description>
    <label>Batch ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>