SynProdGITV1/force-app/main/default/objects/Product_Stock_Batch_Data__c/fields/Best_Before__c.field-meta.xml
<CustomField>
    <fullName>Best_Before__c</fullName>
    <label>Best Before</label>
    <type>Date</type>
</CustomField>