SynProdGITV1/force-app/main/default/objects/Product_Stock_Batch_Data__c/fields/Binding_Code__c.field-meta.xml
<CustomField>
    <fullName>Binding_Code__c</fullName>
    <label>Binding Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>