SynProdGITV1/force-app/main/default/objects/Product_Stock_Batch_Data__c/fields/Product_Stock_Batch_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Stock_Batch_External_ID__c</fullName>
    <description>Product Stock Batch External ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination of Product Code, Enorica Plant and Batch Number</inlineHelpText>
    <label>Product Stock Batch External ID</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>