SynProdGITV1/force-app/main/default/objects/Product_Stock_Batch_Data__c/fields/Product_Stock_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Stock_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Stock ID</label>
    <referenceTo>Product_Stock_Data__c</referenceTo>
    <relationshipLabel>Product Stock Batch Data</relationshipLabel>
    <relationshipName>Product_Stock_Batch_Data</relationshipName>
    <type>Lookup</type>
</CustomField>