SynProdGITV1/force-app/main/default/objects/Product_Stock_Batch_Data__c/fields/Quantity_UoM__c.field-meta.xml
<CustomField>
    <fullName>Quantity_UoM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Unit of Measure</description>
    <inlineHelpText>Unit of Measure</inlineHelpText>
    <label>Quantity UoM</label>
    <referenceTo>UoM_Std_Data__c</referenceTo>
    <relationshipLabel>Product Stock Batch Data</relationshipLabel>
    <relationshipName>Product_Stock_Batch_Data</relationshipName>
    <type>Lookup</type>
</CustomField>